# crazy_lidar

./: CMakeLists.txt  README.md  package.xml
launch/: selidar.launch  view_selidar.launch
rviz/: selidar.rviz
scripts/: test.py
src/: motor_client.cpp  node.cpp
src/drv/: CrazylidarDriver.cpp  SelidarDriver.h  SelidarProtocol.h  SelidarTypes.h  Serial.cpp  Serial.h
src/utils/: Condition.h  Utils.cpp  Utils.h
