<?xml version="1.0"?>
<package>
  <name>crazylidar_node</name>
  <version>0.0.1</version>
  <description>The crazylidar ros package</description>

  <maintainer email="lidar@gzseeing.com">seeing</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
